# serializer version: 1
# name: test_integration_asset_swap_price_sell_basket_buy_token
  dict({
    'buy_balance': dict({
      'asset': dict({
        'address': '0x2170Ed0880ac9A755fd29B2688956BD959F933F8',
        'categories': list([
          'BNB Chain Ecosystem',
          'Binance-Peg Tokens',
        ]),
        'decimals': 18,
        'description': 'Binance pegged Ethereum token',
        'display_name': 'Ethereum',
        'id': 'bsc:0x2170ed0880ac9a755fd29b2688956bd959f933f8',
        'logo_uri': 'https://coin-images.coingecko.com/coins/images/39580/thumb/weth.png',
        'name': 'Binance Ethereum',
        'ticker': 'ETH',
      }),
    }),
    'sell_balance': dict({
      'amount': '1',
      'asset': dict({
        'denomination': '10.0',
        'description': 'This curated basket offers broad exposure to the crypto market through a selection of established, high-liquidity digital assets spanning different blockchain ecosystems. It is designed to balance long-term value preservation with growth potential, reflecting both foundational and emerging trends in decentralized technology. The combination supports diversification across transaction layers, use cases, and network adoption, making it a resilient core holding for crypto-oriented portfolios.',
        'display_name': 'Big4',
        'id': '2bb6425b-a9ee-4292-89c8-c1f0c7a5cb70',
        'name': 'Big4',
        'ticker': 'B4',
        'tokens': list([
          dict({
            'address': '0x7130d2A12B9BCbFAe4f2634d864A1Ee1Ce3Ead9c',
            'categories': list([
              'Crypto-Backed Tokens',
              'BNB Chain Ecosystem',
              'Harmony Ecosystem',
            ]),
            'decimals': 18,
            'description': "Pegged tokens such as BTCB, are 100% backed by the native coin in reserve, which is Bitcoin (BTC) in BTCB's case.",
            'display_name': 'Bitcoin',
            'id': 'bsc:0x7130d2a12b9bcbfae4f2634d864a1ee1ce3ead9c',
            'logo_uri': 'https://coin-images.coingecko.com/coins/images/14108/thumb/Binance-bitcoin.png',
            'name': 'Binance Bitcoin',
            'ticker': 'BTC',
          }),
          dict({
            'address': '0x2170Ed0880ac9A755fd29B2688956BD959F933F8',
            'categories': list([
              'BNB Chain Ecosystem',
              'Binance-Peg Tokens',
            ]),
            'decimals': 18,
            'description': 'Binance pegged Ethereum token',
            'display_name': 'Ethereum',
            'id': 'bsc:0x2170ed0880ac9a755fd29b2688956bd959f933f8',
            'logo_uri': 'https://coin-images.coingecko.com/coins/images/39580/thumb/weth.png',
            'name': 'Binance Ethereum',
            'ticker': 'ETH',
          }),
          dict({
            'address': '0x570A5D26f7765Ecb712C0924E4De545B89fD43dF',
            'categories': list([
              'BNB Chain Ecosystem',
              'Binance-Peg Tokens',
            ]),
            'decimals': 18,
            'description': 'Solana token',
            'display_name': 'Solana',
            'id': 'bsc:0x570a5d26f7765ecb712c0924e4de545b89fd43df',
            'logo_uri': 'https://coin-images.coingecko.com/coins/images/54582/thumb/wsol.png',
            'name': 'SOLANA',
            'ticker': 'SOL',
          }),
          dict({
            'address': '0xbb4CdB9CBd36B01bD1cBaEBF2De08d9173bc095c',
            'categories': list([
              'Crypto-Backed Tokens',
              'BNB Chain Ecosystem',
              'Wrapped-Tokens',
            ]),
            'decimals': 18,
            'description': 'Wrapped BNB a wrapped version of the BNB native tokens on the BEP-20 standard on the Binance Smart Chain and other EVM-compatible chains. Not to be confused with BNB Native Token on the BSC Chain.',
            'display_name': 'Wrapped BNB',
            'id': 'bsc:0xbb4cdb9cbd36b01bd1cbaebf2de08d9173bc095c',
            'logo_uri': 'https://coin-images.coingecko.com/coins/images/12591/thumb/binance-coin-logo.png',
            'name': 'Wrapped BNB',
            'ticker': 'WBNB',
          }),
        ]),
      }),
    }),
  })
# ---
# name: test_integration_asset_swap_price_sell_token_buy_basket
  dict({
    'buy_balance': dict({
      'asset': dict({
        'denomination': '10.0',
        'description': 'This curated basket offers broad exposure to the crypto market through a selection of established, high-liquidity digital assets spanning different blockchain ecosystems. It is designed to balance long-term value preservation with growth potential, reflecting both foundational and emerging trends in decentralized technology. The combination supports diversification across transaction layers, use cases, and network adoption, making it a resilient core holding for crypto-oriented portfolios.',
        'display_name': 'Big4',
        'id': '2bb6425b-a9ee-4292-89c8-c1f0c7a5cb70',
        'name': 'Big4',
        'ticker': 'B4',
        'tokens': list([
          dict({
            'address': '0x7130d2A12B9BCbFAe4f2634d864A1Ee1Ce3Ead9c',
            'categories': list([
              'Crypto-Backed Tokens',
              'BNB Chain Ecosystem',
              'Harmony Ecosystem',
            ]),
            'decimals': 18,
            'description': "Pegged tokens such as BTCB, are 100% backed by the native coin in reserve, which is Bitcoin (BTC) in BTCB's case.",
            'display_name': 'Bitcoin',
            'id': 'bsc:0x7130d2a12b9bcbfae4f2634d864a1ee1ce3ead9c',
            'logo_uri': 'https://coin-images.coingecko.com/coins/images/14108/thumb/Binance-bitcoin.png',
            'name': 'Binance Bitcoin',
            'ticker': 'BTC',
          }),
          dict({
            'address': '0x2170Ed0880ac9A755fd29B2688956BD959F933F8',
            'categories': list([
              'BNB Chain Ecosystem',
              'Binance-Peg Tokens',
            ]),
            'decimals': 18,
            'description': 'Binance pegged Ethereum token',
            'display_name': 'Ethereum',
            'id': 'bsc:0x2170ed0880ac9a755fd29b2688956bd959f933f8',
            'logo_uri': 'https://coin-images.coingecko.com/coins/images/39580/thumb/weth.png',
            'name': 'Binance Ethereum',
            'ticker': 'ETH',
          }),
          dict({
            'address': '0x570A5D26f7765Ecb712C0924E4De545B89fD43dF',
            'categories': list([
              'BNB Chain Ecosystem',
              'Binance-Peg Tokens',
            ]),
            'decimals': 18,
            'description': 'Solana token',
            'display_name': 'Solana',
            'id': 'bsc:0x570a5d26f7765ecb712c0924e4de545b89fd43df',
            'logo_uri': 'https://coin-images.coingecko.com/coins/images/54582/thumb/wsol.png',
            'name': 'SOLANA',
            'ticker': 'SOL',
          }),
          dict({
            'address': '0xbb4CdB9CBd36B01bD1cBaEBF2De08d9173bc095c',
            'categories': list([
              'Crypto-Backed Tokens',
              'BNB Chain Ecosystem',
              'Wrapped-Tokens',
            ]),
            'decimals': 18,
            'description': 'Wrapped BNB a wrapped version of the BNB native tokens on the BEP-20 standard on the Binance Smart Chain and other EVM-compatible chains. Not to be confused with BNB Native Token on the BSC Chain.',
            'display_name': 'Wrapped BNB',
            'id': 'bsc:0xbb4cdb9cbd36b01bd1cbaebf2de08d9173bc095c',
            'logo_uri': 'https://coin-images.coingecko.com/coins/images/12591/thumb/binance-coin-logo.png',
            'name': 'Wrapped BNB',
            'ticker': 'WBNB',
          }),
        ]),
      }),
    }),
    'sell_balance': dict({
      'amount': '1',
      'asset': dict({
        'address': '0x7130d2A12B9BCbFAe4f2634d864A1Ee1Ce3Ead9c',
        'categories': list([
          'Crypto-Backed Tokens',
          'BNB Chain Ecosystem',
          'Harmony Ecosystem',
        ]),
        'decimals': 18,
        'description': "Pegged tokens such as BTCB, are 100% backed by the native coin in reserve, which is Bitcoin (BTC) in BTCB's case.",
        'display_name': 'Bitcoin',
        'id': 'bsc:0x7130d2a12b9bcbfae4f2634d864a1ee1ce3ead9c',
        'logo_uri': 'https://coin-images.coingecko.com/coins/images/14108/thumb/Binance-bitcoin.png',
        'name': 'Binance Bitcoin',
        'ticker': 'BTC',
      }),
    }),
  })
# ---
# name: test_integration_asset_swap_price_sell_token_buy_token
  dict({
    'buy_balance': dict({
      'asset': dict({
        'address': '0x2170Ed0880ac9A755fd29B2688956BD959F933F8',
        'categories': list([
          'BNB Chain Ecosystem',
          'Binance-Peg Tokens',
        ]),
        'decimals': 18,
        'description': 'Binance pegged Ethereum token',
        'display_name': 'Ethereum',
        'id': 'bsc:0x2170ed0880ac9a755fd29b2688956bd959f933f8',
        'logo_uri': 'https://coin-images.coingecko.com/coins/images/39580/thumb/weth.png',
        'name': 'Binance Ethereum',
        'ticker': 'ETH',
      }),
    }),
    'sell_balance': dict({
      'amount': '1',
      'asset': dict({
        'address': '0x7130d2A12B9BCbFAe4f2634d864A1Ee1Ce3Ead9c',
        'categories': list([
          'Crypto-Backed Tokens',
          'BNB Chain Ecosystem',
          'Harmony Ecosystem',
        ]),
        'decimals': 18,
        'description': "Pegged tokens such as BTCB, are 100% backed by the native coin in reserve, which is Bitcoin (BTC) in BTCB's case.",
        'display_name': 'Bitcoin',
        'id': 'bsc:0x7130d2a12b9bcbfae4f2634d864a1ee1ce3ead9c',
        'logo_uri': 'https://coin-images.coingecko.com/coins/images/14108/thumb/Binance-bitcoin.png',
        'name': 'Binance Bitcoin',
        'ticker': 'BTC',
      }),
    }),
  })
# ---
